remove autosubsync,change uosc conf, update potplayer conf

--- a/mpv.conf
+++ b/mpv.conf
@@ -12,12 +12,14 @@ input-ipc-server=mpvpipe
 
 osd-font="Cocon-Regular"
 # hardware video decoder
-hwdec=auto-copy
+#hwdec=auto-copy
+hwdec=d3d11va-copy
 hwdec-codecs=all
 
 vo=gpu-next
 gpu-api=auto
 gpu-context=auto
+d3d11-adapter=Intel
 
 ############external config###########
 cache=yes                               # uses a large seekable RAM cache even for local input.
@@ -87,9 +89,13 @@ sub-margin-y=60
 sub-color='#d6ffffff'
 sub-shadow-offset=5.0
 sub-font=Clear Sans Bold
-sub-back-color='#00000000'
-sub-border-color='#266a678c'
-sub-shadow-color='#00000000'
+#sub-back-color='#00000000'
+#sub-border-color='#266a678c'
+sub-shadow-color='#ff000000'
+sub-border-size=1.5
+sub-shadow-offset=2
+sub-back-color="#aa000000" # little transperancy black
+sub-border-color="#ff0a0a0a" # little black transperancy
 
 sub-auto=all
 
@@ -210,6 +216,6 @@ geometry=50%:50%
 
 #load glsl shaders
 glsl-shader="~~/shaders/apack/vibrance.35.hk"
-glsl-shader="~~/shaders/apack/deContrast.hk"
+glsl-shader="~~/shaders/apack/deContrast.glsl"
 glsl-shader="~~/shaders/adaptive-sharpen.glsl" 
 --gpu-shader-cache-dir="D:\Temp" # ! set the shader cache to a directory with write access
