update mpc hc mpc be backup

--- a/input.conf
+++ b/input.conf
@@ -212,7 +212,7 @@ META+BS           set video-zoom 0 ; show-text "Zoom resetted"
 
 F1       script-binding console/enable
 
-SHARP		add sharpen +0.100
+~		add sharpen +0.100
 $			add sharpen -0.100
 
 #SHIFT+a no-osd change-list glsl-shaders set "/shaders/vibrance.35.hk;/shaders/bShadows-08.hk;/shaders/expand10_240.hk;~~/shaders/adaptive-sharpen.glsl"; show-text "SSimSuperRes+KrigBilateral+AdaptiveSharpen" 
@@ -230,7 +230,7 @@ ALT+s change-list glsl-shaders set "~~/shaders/apack/bShadows-08.hk;~~/shaders/a
 # Switch to a new shader chain:
 ALT+d change-list glsl-shaders set "~~/shaders/apack/bShadows-08.hk;~~/shaders/apack/vibrance.35.hk;~~/shaders/apack/deContrast.glsl;~~/shaders/CAS-scaled.glsl"; show-text "bShad Vibr DeContr CAS" 3000
 
-ALT+SHIFT+d change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shaders/apack/deContrast.glsl;~~/shaders/adaptive-sharpen.glsl"; show-text "vibr35 deContr adSharp" 3000
+ALT+SHIFT+d change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shaders/apack/deContrast.glsl;~~/shaders/adaptive-sharpen.glsl;~~/shaders/apack/bDim-35.hook"; show-text "vibr35 deContr adSharp bDim" 3000
 
 ALT+SHIFT+s change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shaders/apack/bShadows-08.hk;~~/shaders/apack/deContrast.glsl;~~/shaders/apack/tooDark.24.hk;~~/shaders/adaptive-sharpen.glsl"; show-text "vibr bShad deContr tooDark24 adSharp" 3000
 
