--- a/mpv.conf
+++ b/mpv.conf
@@ -52,8 +52,8 @@ af=@normalize:speechnorm=e=10:r=0.0005:l=1
 
 ############externalSubtitleConfig#############
 # Display English Subtitles if available
-#sub-ass-force-margins=yes
-#sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
+sub-ass-force-margins=yes
+sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
 #sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
 #sub-border-color="#FF262626"
 #sub-border-size=3.0
@@ -61,7 +61,7 @@ af=@normalize:speechnorm=e=10:r=0.0005:l=1
 #sub-shadow-color="#33000000"
 #sub-shadow-offset=1
 #sub-spacing=0.5
-#sub-use-margins=yes
+sub-use-margins=yes
 alang=en,eng                            # default audio languages
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 slang=en,eng,English                            # default subtitles languages                     # use yellow sub color (remove this line to make subtitles the default white colour)
@@ -84,11 +84,11 @@ sub-file-paths-append=subtitles
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
 
 sub-blur=0.5
-sub-scale=0.7
-sub-margin-y=60
+sub-scale=0.8
+#sub-margin-y=30
 sub-color='#d6ffffff'
 sub-shadow-offset=5.0
-sub-font=Clear Sans Bold
+sub-font=Atkinson Hyperlegible
 #sub-back-color='#00000000'
 #sub-border-color='#266a678c'
 sub-shadow-color='#ff000000'
@@ -124,7 +124,8 @@ demuxer-mkv-subtitle-preroll=yes    # Try to correctly show embedded subs when s
 
 # high quality video output, require rather fast video card
 # profile=gpu-hq
-profile=fast
+#profile=fast
+profile=gpu-hq
 # D3D11 renderer (default) is required for the HDR playback
 #gpu-api=d3d11
 
@@ -218,4 +219,5 @@ geometry=50%:50%
 glsl-shader="~~/shaders/apack/vibrance.35.hk"
 glsl-shader="~~/shaders/apack/deContrast.glsl"
 glsl-shader="~~/shaders/adaptive-sharpen.glsl" 
+glsl-shader="~~/shaders/apack/sCurve.hk.glsl" 
 --gpu-shader-cache-dir="D:\Temp" # ! set the shader cache to a directory with write access
