change vo to enable sharpness

--- a/input.conf
+++ b/input.conf
@@ -212,8 +212,8 @@ META+BS           set video-zoom 0 ; show-text "Zoom resetted"
 
 F1       script-binding console/enable
 
-~		add sharpen +0.100
-$			add sharpen -0.100
+`		add sharpen +0.100
+~			add sharpen -0.100
 
 #SHIFT+a no-osd change-list glsl-shaders set "/shaders/vibrance.35.hk;/shaders/bShadows-08.hk;/shaders/expand10_240.hk;~~/shaders/adaptive-sharpen.glsl"; show-text "SSimSuperRes+KrigBilateral+AdaptiveSharpen" 
 
