--- a/mpv.conf
+++ b/mpv.conf
@@ -16,7 +16,7 @@ osd-font="Cocon-Regular"
 hwdec=d3d11va-copy
 hwdec-codecs=all
 
-vo=gpu-next
+vo=gpu
 gpu-api=auto
 gpu-context=auto
 d3d11-adapter=Intel
