refactor mpv config to make it clean

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,48 +1,94 @@
-﻿#
-# THIS FILE WILL BE OVERWRITTEN WITH THE PACKAGE UPDATE
-# Use %APPDATA%/mpv/mpv.conf
-# OR SVP's menu -> Information -> Add. information -> mpv config. file
-#     to define your own customized configuration
-#
-# Sample mpv configuration
-#
-
-# this is required for SVP to "catch" the mpv
+﻿# To connect to SVP application, not needed otherwise
 input-ipc-server=mpvpipe
 
 osd-font="Cocon-Regular"
-# hardware video decoder
-#hwdec=auto-copy
-hwdec=d3d11va-copy
+
+#============================================================================================================================================================================#
+##########Video##########
+#hwdec=auto-copy                        # hardware video decoder
+hwdec=dxva2-copy
 hwdec-codecs=all
-
 vo=gpu
+# D3D11 renderer (default) is required for the HDR playback
+#gpu-api=d3d11
+# use VULKAN API if you have problems with the default d3d11 renderer
+#gpu-api=vulkan
 gpu-api=auto
-gpu-context=auto
+gpu-context=d3d11
 d3d11-adapter=Intel
-
-############external config###########
-cache=yes                               # uses a large seekable RAM cache even for local input.
-cache-secs=300
-border=no
-osd-bar=no
-osc=no
-save-position-on-quit=yes
+# high quality video output, require rather fast video card
+# profile=gpu-hq
+#profile=fast
+profile=gpu-hq
 vlang=en,eng                            # Sets the video language
-volume-max=150                          # maximum volume in %, everything above 100 results in amplification
-volume=70
-snap-window=yes                         # Enables windows snapping for Windows 10, 11
-priority=high                           # Makes PC prioritize MPV for allocating resources
+
+#Set the fps as the max. of your monitor Hz (only useful and needed with "interpolation=yes)
+#If you use any "spdif" setting, use "display-tempo" instead (or don't use any interpolation)
+# video-sync=display-resample
+
+# add sharpening filter
+# vf-add=sharpen
+# sharpen-opts=amount=5
+
+# "ReClock" replacement
+#video-sync=display-resample
+#video-sync-max-video-change=5
+
+#Gamma correction for a PC screen (sRGB)
+#Not needed for a TV screen (Rec.709/Rec.2020)
+#Sets the output to sRGB with approximately 2.2 power law gamma
+# target-trc=srgb
+# gamma-factor=1.1
+
+# #Activate interpolation
+# interpolation=yes
+
+# #Interpolation method [look at the table below]
+# tscale=mitchell
+# # moothness/Sharpness	Interpolation
+# # Sharpest (Default)	oversample
+# # Sharper	linear
+# # Sharp	catmull_rom
+# # Smooth	mitchell
+# # Smoother	gaussian
+# # Smoothest	bicubic
+
+# #Trade smoothness for performance (disables dynamic updates)
+# interpolation-preserve=yes
+
+#for interpolation using mvtools: link to original thread: https://www.reddit.com/r/mpv/comments/oke3aa/guide_how_to_get_motion_interpolation_soap_opera/
+# vf=vapoursynth="C:\Users\Admin\AppData\Roaming\mpv\scripts\mvtools.vpy":buffered-frames=4:concurrent-frames=32
+
+I have an iGPU laptop edition:
+scale=spline36
+dscale=mitchell
+cscale=mitchell
+
+# # I have a Toaster (crappy PC) edition:
+# scale=bilinear # Set spline16 if possible.
+# dscale=mitchell
+# cscale=bilinear
+
+#============================================================================================================================================================================#
+##########Audio##########
+volume-max=200                          # maximum volume in %, everything above 100 results in amplification
+#volume=70
 audio-pitch-correction=yes
-#ontop=yes
+audio-channels=auto
+audio-pitch-correction=yes
+#audio-normalize-downmix=yes
+# fixes audio desync
+hr-seek-framedrop=no
 
-##############normalizeaudio#############
-# af=lavfi=[dynaudnorm=f=75:g=25:p=0.55]
-# af=lavfi=[loudnorm=I=-16:TP=-3:LRA=4]
+#"auto-safe" only sends channels that your active audio device can handle, which can cause issues for an ARC/eARC setup (uses TV instead of soundbar) 
+#"auto" sends every channels as they're, which works for an eARC/ARC setup but also can cause issues if your sound device doesn't support certain channel setups
+#An alternative is to set up a whitelist for supported channels
+audio-channels=auto-safe
 
+
+##########NormalizeAudio##########
 # af=lavfi=[amix=6.3]
 # af=lavfi=[dynaudnorm=f=200:g=15:p=0.5:m=10:r=1] # claude ai suggested
-
 # --af=dynaudnorm=f=150:g=15:m=100:n=500  # chatgpt suggested
 # af=dynaudnorm=f=32:g=15:p=0.5:m=11:r=0.25 #potplayer cloned using claude
 # boost speech volume
@@ -50,8 +96,27 @@ af=@normalize:speechnorm=e=10:r=0.0005:l=1
 # loudnorm works well too, but uses more CPU
 #af=@normalize:loudnorm=I=-10
 
-############externalSubtitleConfig#############
-# Display English Subtitles if available
+#============================================================================================================================================================================#
+##########General##########
+cache=yes                               # uses a large seekable RAM cache even for local input.
+cache-secs=300
+border=no
+osd-bar=no
+osc=no
+save-position-on-quit=yes
+snap-window=yes                         # Enables windows snapping for Windows 10, 11
+priority=high                           # Makes PC prioritize MPV for allocating resources
+#ontop=yes                              # Keeps mpv in focus when switching to another window
+force-seekable=yes
+#log-file=mpv.log                      # To debug mpv issues
+geometry=50%:50%
+
+#============================================================================================================================================================================#
+##########Subtitles##########
+#Some settings fixing VOB/PGS subtitles (creating blur & changing yellow subs to gray)
+sub-gauss=1.0
+sub-gray=yes
+
 sub-ass-force-margins=yes
 sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
 #sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
@@ -82,7 +147,6 @@ sub-file-paths-append=sub
 sub-file-paths-append=subs
 sub-file-paths-append=subtitles
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-
 sub-blur=0.5
 sub-scale=0.8
 #sub-margin-y=30
@@ -96,16 +160,14 @@ sub-border-size=1.5
 sub-shadow-offset=2
 sub-back-color="#aa000000" # little transperancy black
 sub-border-color="#ff0a0a0a" # little black transperancy
-
 sub-auto=all
 
-audio-channels=auto
+#Subtitle blending in scenechanges (smoother effect)
+#The difference is noticeable if you use interpolation with a non divisible integer (like 24fps content on 60Hz)
+#Keep in mind that this won't work with crop
 blend-subtitles=yes
+
 sub-ass-override=yes
-
-audio-pitch-correction=yes
-audio-normalize-downmix=yes
-
 # sub-scale-with-window=yes
 # sub-font-dir="/fonts/"
 # sub-font="Trebuchet MS"
@@ -122,102 +184,12 @@ demuxer-mkv-subtitle-preroll=yes    # Try to correctly show embedded subs when s
 # sub-ass-override=OutlineWidth=3.5,Shadow=3
 #style="PlayResX=1280,PlayResY=720,Name=Default,Fontname=Liberation Sans Narrow,Fontsize=32,PrimaryColour=&H00ffffff,BackColour=&H00000000,OutlineColour=&H00000000,Bold=1,Italic=0,Alignment=2,BorderStyle=3,Outline=0.3,Shadow=0,MarginL=60,MarginR=60,MarginV=30"
 
-# high quality video output, require rather fast video card
-# profile=gpu-hq
-#profile=fast
-profile=gpu-hq
-# D3D11 renderer (default) is required for the HDR playback
-#gpu-api=d3d11
-
-# load glsl shaders
+#============================================================================================================================================================================#
+##########load glsl shaders##########
 # sigmoid-upscaling=no
-# glsl-shaders="C:\Users\Admin\AppData\Roaming\mpv\glsl\lumaSharpenHook.glsl"
-
-# add sharpening filter
-# vf-add=sharpen
-# sharpen-opts=amount=5
-
-# use VULKAN API if you have problems with the default d3d11 renderer
-#gpu-api=vulkan
-
-# miscellaneous options
-force-seekable=yes
-# comment this one if you want mpv to remember the playback position
-#save-position-on-quit=no
-
-# fixes audio desync
-hr-seek-framedrop=no
-
-# "ReClock" replacement
-#video-sync=display-resample
-#video-sync-max-video-change=5
-
-#log-file=mpv.log
-
-#Gamma correction for a PC screen (sRGB)
-#Not needed for a TV screen (Rec.709/Rec.2020)
-#Sets the output to sRGB with approximately 2.2 power law gamma
-# target-trc=srgb
-# gamma-factor=1.1
-
-#Max volume of the player
-volume-max=200
-
-#Channels that your device supports
-#"auto-safe" only sends channels that your active audio device can handle, which can cause issues for an ARC/eARC setup (uses TV instead of soundbar) 
-#"auto" sends every channels as they're, which works for an eARC/ARC setup but also can cause issues if your sound device doesn't support certain channel setups
-#An alternative is to set up a whitelist for supported channels
-audio-channels=auto-safe
-
-
-#Subtitle blending in scenechanges (smoother effect)
-#The difference is noticeable if you use interpolation with a non divisible integer (like 24fps content on 60Hz)
-#Keep in mind that this won't work with crop
-blend-subtitles=yes
-
-#Some settings fixing VOB/PGS subtitles (creating blur & changing yellow subs to gray)
-sub-gauss=1.0
-sub-gray=yes
-
-#Set the fps as the max. of your monitor Hz (only useful and needed with "interpolation=yes)
-#If you use any "spdif" setting, use "display-tempo" instead (or don't use any interpolation)
-# video-sync=display-resample
-
-# #Activate interpolation
-# interpolation=yes
-
-# #Interpolation method [look at the table below]
-# tscale=mitchell
-# # moothness/Sharpness	Interpolation
-# # Sharpest (Default)	oversample
-# # Sharper	linear
-# # Sharp	catmull_rom
-# # Smooth	mitchell
-# # Smoother	gaussian
-# # Smoothest	bicubic
-
-# #Trade smoothness for performance (disables dynamic updates)
-# interpolation-preserve=yes
-
-# I have an iGPU laptop edition:
-# scale=spline36
-# dscale=mitchell
-# cscale=mitchell
-
-# I have a Toaster (crappy PC) edition:
-scale=bilinear # Set spline16 if possible.
-dscale=mitchell
-cscale=bilinear
-
-snap-window
-geometry=50%:50%
-
-#for interpolation using mvtools: link to original thread: https://www.reddit.com/r/mpv/comments/oke3aa/guide_how_to_get_motion_interpolation_soap_opera/
-# vf=vapoursynth="C:\Users\Admin\AppData\Roaming\mpv\scripts\mvtools.vpy":buffered-frames=4:concurrent-frames=32
-
-#load glsl shaders
 glsl-shader="~~/shaders/apack/vibrance.35.hk"
 glsl-shader="~~/shaders/apack/deContrast.glsl"
 glsl-shader="~~/shaders/adaptive-sharpen.glsl" 
 glsl-shader="~~/shaders/apack/sCurve.hk.glsl" 
 --gpu-shader-cache-dir="D:\Temp" # ! set the shader cache to a directory with write access
+
