--- a/input.conf
+++ b/input.conf
@@ -238,6 +238,7 @@ ALT+CTRL+d change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shad
 
 CTRL+o set ontop yes
 CTRL+SHIFT+o set ontop no
+ALT+m script-binding Blackbox
 # Numpad
 
 KP0      ignore
