--- a/mpv.conf
+++ b/mpv.conf
@@ -6,7 +6,7 @@ osd-font="Cocon-Regular"
 #============================================================================================================================================================================#
 ##########Video##########
 #hwdec=auto-copy                        # hardware video decoder
-hwdec=dxva2-copy
+hwdec=d3d11va-copy
 hwdec-codecs=all
 vo=gpu
 # D3D11 renderer (default) is required for the HDR playback
@@ -14,12 +14,11 @@ vo=gpu
 # use VULKAN API if you have problems with the default d3d11 renderer
 #gpu-api=vulkan
 gpu-api=auto
-gpu-context=d3d11
+gpu-context=auto
 d3d11-adapter=Intel
 # high quality video output, require rather fast video card
 # profile=gpu-hq
-#profile=fast
-profile=gpu-hq
+profile=fast
 vlang=en,eng                            # Sets the video language
 
 #Set the fps as the max. of your monitor Hz (only useful and needed with "interpolation=yes)
@@ -59,20 +58,20 @@ vlang=en,eng                            # Sets the video language
 #for interpolation using mvtools: link to original thread: https://www.reddit.com/r/mpv/comments/oke3aa/guide_how_to_get_motion_interpolation_soap_opera/
 # vf=vapoursynth="C:\Users\Admin\AppData\Roaming\mpv\scripts\mvtools.vpy":buffered-frames=4:concurrent-frames=32
 
-I have an iGPU laptop edition:
-scale=spline36
-dscale=mitchell
-cscale=mitchell
+#I have an iGPU laptop edition:
+#scale=spline36
+#dscale=mitchell
+#cscale=mitchell
 
 # # I have a Toaster (crappy PC) edition:
-# scale=bilinear # Set spline16 if possible.
-# dscale=mitchell
-# cscale=bilinear
+scale=bilinear # Set spline16 if possible.
+dscale=mitchell
+cscale=bilinear
 
 #============================================================================================================================================================================#
 ##########Audio##########
 volume-max=200                          # maximum volume in %, everything above 100 results in amplification
-#volume=70
+volume=70
 audio-pitch-correction=yes
 audio-channels=auto
 audio-pitch-correction=yes
@@ -188,8 +187,8 @@ demuxer-mkv-subtitle-preroll=yes    # Try to correctly show embedded subs when s
 ##########load glsl shaders##########
 # sigmoid-upscaling=no
 glsl-shader="~~/shaders/apack/vibrance.35.hk"
-glsl-shader="~~/shaders/apack/deContrast.glsl"
-glsl-shader="~~/shaders/adaptive-sharpen.glsl" 
-glsl-shader="~~/shaders/apack/sCurve.hk.glsl" 
+#glsl-shader="~~/shaders/apack/deContrast.glsl"
+glsl-shader="~~/shaders/CAS-scaled.glsl" 
+#glsl-shader="~~/shaders/apack/sCurve.hk.glsl" 
 --gpu-shader-cache-dir="D:\Temp" # ! set the shader cache to a directory with write access
 
