--- a/mpv.conf
+++ b/mpv.conf
@@ -166,7 +166,9 @@ sub-auto=all
 #Keep in mind that this won't work with crop
 blend-subtitles=yes
 
-sub-ass-override=yes
+sub-ass-override=force
+sub-filter-sdh=yes
+#sub-ass-override=yes
 # sub-scale-with-window=yes
 # sub-font-dir="/fonts/"
 # sub-font="Trebuchet MS"
