--- a/input.conf
+++ b/input.conf
@@ -236,6 +236,8 @@ ALT+SHIFT+s change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/sha
 
 ALT+CTRL+d change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shaders/apack/deContrast.glsl;~~/shaders/apack/tooDark.24.hk;~~/shaders/adaptive-sharpen.glsl"; show-text "vibr deContr tooDark adSharp" 3000
 
+ALT+CTRL+z change-list glsl-shaders set "~~/shaders/apack/vibrance.35.hk;~~/shaders/adaptive-sharpen.glsl"; show-text "vibr adSharp" 3000
+
 
 # Numpad
 
