update video player backup

--- a/mpv.conf
+++ b/mpv.conf
@@ -71,7 +71,7 @@ cscale=bilinear
 #============================================================================================================================================================================#
 ##########Audio##########
 volume-max=200                          # maximum volume in %, everything above 100 results in amplification
-volume=70
+volume=30
 audio-pitch-correction=yes
 audio-channels=auto
 audio-pitch-correction=yes
@@ -116,15 +116,6 @@ geometry=50%:50%
 sub-gauss=1.0
 sub-gray=yes
 
-sub-ass-force-margins=yes
-sub-ass-force-style=Kerning=yes        # allows you to override style parameters of ASS scripts
-#sub-auto=fuzzy                         # external subs don't have to match the file name exactly to autoload
-#sub-border-color="#FF262626"
-#sub-border-size=3.0
-#sub-color="#FFFFFFFF"
-#sub-shadow-color="#33000000"
-#sub-shadow-offset=1
-#sub-spacing=0.5
 sub-use-margins=yes
 alang=en,eng                            # default audio languages
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
@@ -146,44 +137,41 @@ sub-file-paths-append=sub
 sub-file-paths-append=subs
 sub-file-paths-append=subtitles
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
+
 sub-blur=0.5
 sub-scale=0.8
-#sub-margin-y=30
 sub-color='#d6ffffff'
 sub-shadow-offset=5.0
 sub-font=Atkinson Hyperlegible
-#sub-back-color='#00000000'
-#sub-border-color='#266a678c'
 sub-shadow-color='#ff000000'
 sub-border-size=1.5
 sub-shadow-offset=2
-sub-back-color="#aa000000" # little transperancy black
-sub-border-color="#ff0a0a0a" # little black transperancy
+#sub-back-color="#aa000000" # little transperancy black
+#sub-border-color="#ff0a0a0a" # little black transperancy
 sub-auto=all
-
-#Subtitle blending in scenechanges (smoother effect)
-#The difference is noticeable if you use interpolation with a non divisible integer (like 24fps content on 60Hz)
-#Keep in mind that this won't work with crop
-blend-subtitles=yes
 
 sub-ass-override=force
 sub-filter-sdh=yes
-#sub-ass-override=yes
-# sub-scale-with-window=yes
-# sub-font-dir="/fonts/"
-# sub-font="Trebuchet MS"
+
+sub-scale-with-window=yes
 # sub-font-size=40
-# sub-auto=fuzzy                      # Load additional subtitle files containing the video filename
+sub-auto=fuzzy                      # Load additional subtitle files containing the video filename
 demuxer-mkv-subtitle-preroll=yes    # Try to correctly show embedded subs when seeking
-# sub-shadow-color="#ff000000"
-# sub-back-color="#aa000000" # little transperancy black
-# sub-border-color="#ff0a0a0a" # little black transperancy
-# # sub-back-color="#000000" #no transperancy
-# # sub-border-color="#000000" #no transperancy
-# sub-border-size=1.5
-# sub-shadow-offset=2
-# sub-ass-override=OutlineWidth=3.5,Shadow=3
-#style="PlayResX=1280,PlayResY=720,Name=Default,Fontname=Liberation Sans Narrow,Fontsize=32,PrimaryColour=&H00ffffff,BackColour=&H00000000,OutlineColour=&H00000000,Bold=1,Italic=0,Alignment=2,BorderStyle=3,Outline=0.3,Shadow=0,MarginL=60,MarginR=60,MarginV=30"
+
+##Subtitle Background
+sub-ass-override=force
+sub-ass-force-style=BackColour=CC000000,BorderStyle=4,Outline=0,Shadow=0
+sub-color='#FFFFFF'
+sub-font-size=40
+sub-use-margins=yes
+sub-margin-y=30
+sub-ass-force-margins=yes
+sub-scale=1.0
+sub-ass-style-override=force
+
+# Force box style specifically
+sub-ass-styles-override=yes
+sub-ass-style=Default,BoxStyle=3,BackColour=CC000000,MarginV=30
 
 #============================================================================================================================================================================#
 ##########load glsl shaders##########
