--- a/mpv.conf
+++ b/mpv.conf
@@ -26,8 +26,8 @@ vlang=en,eng                            # Sets the video language
 # video-sync=display-resample
 
 # add sharpening filter
-# vf-add=sharpen
-# sharpen-opts=amount=5
+vf-add=sharpen
+sharpen-opts=amount=1.5
 
 # "ReClock" replacement
 #video-sync=display-resample
@@ -90,10 +90,11 @@ audio-channels=auto-safe
 # af=lavfi=[dynaudnorm=f=200:g=15:p=0.5:m=10:r=1] # claude ai suggested
 # --af=dynaudnorm=f=150:g=15:m=100:n=500  # chatgpt suggested
 # af=dynaudnorm=f=32:g=15:p=0.5:m=11:r=0.25 #potplayer cloned using claude
+# af=dynaudnorm=f=75:g=15:g=25:p=0.55 # svplayer config
 # boost speech volume
-af=@normalize:speechnorm=e=10:r=0.0005:l=1
+ af=@normalize:speechnorm=e=10:r=0.0005:l=1
 # loudnorm works well too, but uses more CPU
-#af=@normalize:loudnorm=I=-10
+# af=@normalize:loudnorm=I=-10
 
 #============================================================================================================================================================================#
 ##########General##########
@@ -105,7 +106,7 @@ osc=no
 save-position-on-quit=yes
 snap-window=yes                         # Enables windows snapping for Windows 10, 11
 priority=high                           # Makes PC prioritize MPV for allocating resources
-#ontop=yes                              # Keeps mpv in focus when switching to another window
+ontop=always                              # Keeps mpv in focus when switching to another window
 force-seekable=yes
 #log-file=mpv.log                      # To debug mpv issues
 geometry=50%:50%
