--- a/script-opts/uosc.conf
+++ b/script-opts/uosc.conf
@@ -26,10 +26,9 @@ timeline_step=5
 timeline_chapters_opacity=0.8
 # Render cache indicators for streaming content
 timeline_cache=yes
-
 # A comma delimited list of items to construct the controls bar above the timeline. Set to `never` to disable.
 # Parameter spec: enclosed in `{}` means value, enclosed in `[]` means optional
-# Full item syntax: `[<[!]{disposition1}[,[!]{dispositionN}]>]{element}[:{paramN}][#{badge}[>{limit}]][?{tooltip}]`
+# Full item syntax: `[<[]{dispositionN}]>]{element}[:{paramN}][#{badge}[>{limit}]][?{tooltip}]`
 # Common properties:
 #   `{icon}` - parameter used to specify an icon name (example: `face`)
 #            - you can pick one here: https://fonts.google.com/icons?selected=Material+Icons&icon.style=Rounded
@@ -44,15 +43,15 @@ timeline_cache=yes
 #   `speed[:{scale}]` - display speed slider, [{scale}] - factor of controls_size, default: 1.3
 #   `command:{icon}:{command}` - button that executes a {command} when pressed
 #   `toggle:{icon}:{prop}[@{owner}]` - button that toggles mpv property
-#   `cycle:{default_icon}:{prop}[@{owner}]:{value1}[={icon1}][!]/{valueN}[={iconN}][!]`
+#   `cycle:{default_icon}:{prop}[@{owner}]:{value1}[={icon1}][]`
 #     - button that cycles mpv property between values, each optionally having different icon and active flag
-#     - presence of `!` at the end will style the button as active
+#     - presence of `` at the end will style the button as active
 #     - `{owner}` is the name of a scrip that manages this property if any
 #   `gap[:{scale}]` - display an empty gap, {scale} - factor of controls_size, default: 0.3
 #   `space` - fills all available space between previous and next item, useful to align items to the right
 #           - multiple spaces divide the available space among themselves, which can be used for centering
 # Item visibility control:
-#   `<[!]{disposition1}[,[!]{dispositionN}]>` - optional prefix to control element's visibility
+#   `<[]{dispositionN}]>` - optional prefix to control element's visibility
 #   - `{disposition}` can be one of:
 #     - `idle` - true if mpv is in idle mode (no file loaded)
 #     - `image` - true if current file is a single image
@@ -67,10 +66,10 @@ timeline_cache=yes
 #     - `has_chapter` - true for files with chapter list
 #     - `stream` - true if current file is read from a stream
 #     - `has_playlist` - true if current playlist has 2 or more items in it
-#   - prefix with `!` to negate the required disposition
+#   - prefix with `` to negate the required disposition
 #   Examples:
 #     - `<stream>stream-quality` - show stream quality button only for streams
-#     - `<has_audio,!audio>audio` - show audio tracks button for all files that have
+#     - `<has_audio,audio>audio` - show audio tracks button for all files that have
 #                                   an audio track, but are not exclusively audio only files
 # Place `#{badge}[>{limit}]` after the element params to give it a badge. Available badges:
 #   `sub`, `audio`, `video` - track type counters
@@ -83,16 +82,15 @@ timeline_cache=yes
 # Example implementations of some of the available shorthands:
 #   menu = command:menu:script-binding uosc/menu-blurred?Menu
 #   subtitles = command:subtitles:script-binding uosc/subtitles#sub?Subtitles
-#   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit!?Fullscreen
-#   loop-playlist = cycle:repeat:loop-playlist:no/inf!?Loop playlist
-#   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes!
+#   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit?Fullscreen
+#   loop-playlist = cycle:repeat:loop-playlist:no/inf?Loop playlist
+#   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes
 controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,command:history:script-binding memo-history?History,prev,items,next,gap,command:fullscreen:script-binding pip/toggle
 controls_size=32
 controls_size_fullscreen=40
 controls_margin=8
 controls_spacing=2
 controls_persistency=
-
 # Where to display volume controls: none, left, right
 volume=right
 volume_size=40
@@ -101,13 +99,11 @@ volume_opacity=0.9
 volume_border=1
 volume_step=1
 volume_persistency=
-
 # Playback speed widget: mouse drag or wheel to change, click to reset
 speed_opacity=0.6
 speed_step=0.05
 speed_step_is_factor=no
 speed_persistency=
-
 # Controls all menus, such as context menu, subtitle loader/selector, etc
 menu_item_height=36
 menu_item_height_fullscreen=50
@@ -115,7 +111,6 @@ menu_min_width=260
 menu_min_width_fullscreen=360
 menu_opacity=1
 menu_parent_opacity=0.4
-
 # Top bar with window controls and media title
 # Can be: never, no-border, always
 top_bar=no-border
@@ -134,11 +129,9 @@ top_bar_alt_title=
 top_bar_alt_title_place=below
 top_bar_title_opacity=0.8
 top_bar_persistency=
-
 # Window border drawn in no-border mode
 window_border_size=1
 window_border_opacity=0.8
-
 # If there's no playlist and file ends, load next file in the directory
 # Requires `keep-open=yes` in `mpv.conf`.
 autoload=no
@@ -149,7 +142,6 @@ autoload_types=video,audio,image
 # This simply makes the next selected playlist or directory item be random, just
 # like any other player in the world. It also has an easily togglable control button.
 shuffle=no
-
 # Scale the interface by this factor
 ui_scale=1
 # Adjust the text scaling to fit your font
@@ -202,7 +194,6 @@ default_directory=~/
 use_trash=no
 # Adjusted osd margins based on the visibility of UI elements
 adjust_osd_margins=yes
-
 # Adds chapter range indicators to some common chapter types.
 # Additionally to displaying the start of the chapter as a diamond icon on top of the timeline,
 # the portion of the timeline of that chapter range is also colored based on the config below.
