add ontop_while_playing, adaptiveSharpen_glsl, new font, command_palette, quack, countdown scripts

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,7 +1,7 @@
 ﻿# To connect to SVP application, not needed otherwise
 input-ipc-server=mpvpipe
 
-osd-font="Cocon-Regular"
+osd-font="Yandex Sans Text Regular"
 
 #============================================================================================================================================================================#
 ##########Video##########
@@ -106,7 +106,7 @@ osc=no
 save-position-on-quit=yes
 snap-window=yes                         # Enables windows snapping for Windows 10, 11
 priority=high                           # Makes PC prioritize MPV for allocating resources
-ontop=always                              # Keeps mpv in focus when switching to another window
+ontop=yes                              # Keeps mpv in focus when switching to another window
 force-seekable=yes
 #log-file=mpv.log                      # To debug mpv issues
 geometry=50%:50%
@@ -178,8 +178,9 @@ sub-ass-style=Default,BoxStyle=3,BackColour=CC000000,MarginV=30
 ##########load glsl shaders##########
 # sigmoid-upscaling=no
 glsl-shader="~~/shaders/apack/vibrance.35.hk"
-#glsl-shader="~~/shaders/apack/deContrast.glsl"
-glsl-shader="~~/shaders/CAS-scaled.glsl" 
+glsl-shader="~~/shaders/apack/deContrast.glsl"
+# glsl-shader="~~/shaders/CAS-scaled.glsl"
+glsl-shader="~~/shaders/adaptive-sharpen.glsl"
 #glsl-shader="~~/shaders/apack/sCurve.hk.glsl" 
 --gpu-shader-cache-dir="D:\Temp" # ! set the shader cache to a directory with write access
 
