--- a/script-opts/uosc.conf
+++ b/script-opts/uosc.conf
@@ -17,7 +17,7 @@ timeline_start_hidden=no
 # Comma separated states when timeline should always be visible. available: paused, audio, image, video, idle
 timeline_persistency=paused
 # Timeline opacity
-timeline_opacity=0.9
+timeline_opacity=0.4
 # Top border of background color to help visually separate timeline from video
 timeline_border=1
 # When scrolling above timeline, wheel will seek by this amount of seconds
@@ -95,10 +95,10 @@ controls_persistency=
 volume=right
 volume_size=40
 volume_size_fullscreen=52
-volume_opacity=0.9
+volume_opacity=0.5
 volume_border=1
 volume_step=1
-volume_persistency=
+volume_persistency=yes
 # Playback speed widget: mouse drag or wheel to change, click to reset
 speed_opacity=0.6
 speed_step=0.05
@@ -121,13 +121,13 @@ top_bar_controls=yes
 top_bar_title=yes
 # Template string to enable alternative top bar title. If alt title matches main title,
 # it'll be hidden. Tip: use `${media-title}` for main, and `${filename}` for alt title.
-top_bar_alt_title=
+top_bar_alt_title=`${filename}`
 # Can be:
 #   `below`  => display alt title below the main one
 #   `toggle` => toggle the top bar title text between main and alt by clicking
 #               the top bar, or calling `toggle-title` binding
 top_bar_alt_title_place=below
-top_bar_title_opacity=0.8
+top_bar_title_opacity=0.6
 top_bar_persistency=
 # Window border drawn in no-border mode
 window_border_size=1
@@ -176,7 +176,7 @@ buffered_time_threshold=60
 # Hide UI when mpv autohides the cursor
 autohide=no
 # Can be: none, flash, static, manual (controlled by flash-pause-indicator and decide-pause-indicator commands)
-pause_indicator=flash
+pause_indicator=static
 # Screen dim when stuff like menu is open, 0 to disable
 curtain_opacity=0.5
 # Sizes to list in stream quality menu
